--- a/assets/themes/the-minimum/css/style.less
+++ b/assets/themes/the-minimum/css/style.less
@@ -56,7 +56,6 @@ pre {
 --------------------------------------------------------------------------------- */
 .the-header {
 	.logo {
-		font-family: @webfont;
 		margin: 0;
 		a:visited { color: @main-font-color; }
 	}
@@ -155,7 +154,7 @@ pre {
 		img.right { margin-left: 16px; }
 
 		.date-publish { margin-bottom: 0; }
-		.list-linear .list-head { margin-right: 4px; }
+		.list-linear .list-head { margin-right: 0.8em; }
 		.list-category a, .list-tag a {
 			border: 0 none;
 			&:hover span { background-color: @orange; }
