--- a/assets/themes/the-minimum/css/style.css
+++ b/assets/themes/the-minimum/css/style.css
@@ -1,7 +1,7 @@
 @import "base.css";
 @import "module.css";
-@import "syntaxhighlighter.css";
 @import "helper.css";
+@import "syntaxhighlighter.css";
 /*
 Frameless			<http://framelessgrid.com/>
 by Joni Korpi 		<http://jonikorpi.com/>
@@ -195,22 +195,39 @@ a:hover {
   color: #474747;
   text-decoration: none;
 }
-/* HIGHLIGHTER */
-pre {
-  margin-bottom: 1.625em;
+/* highlighter */
+code {
+  padding: 2px 4px;
+  font-size: 90%;
+  color: #c7254e;
+  background-color: #f9f2f4;
+  white-space: nowrap;
+  border-radius: 4px;
 }
 pre {
-  color: #f2f2f2;
-  background-color: #393939;
-  border: 1px solid #393939;
-  font-family: "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
-  margin-left: 0;
-  margin-right: 0;
-  padding: 1.625em;
-  overflow: auto;
-  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.6);
-  -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.6);
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.6);
+  display: block;
+  padding: 9.5px;
+  margin: 0 0 10px;
+  font-size: 13px;
+  line-height: 1.42857143;
+  word-break: break-all;
+  word-wrap: break-word;
+  color: #333333;
+  background-color: #f5f5f5;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+}
+pre code {
+  padding: 0;
+  font-size: inherit;
+  color: inherit;
+  white-space: pre-wrap;
+  background-color: transparent;
+  border-radius: 0;
+}
+.pre-scrollable {
+  max-height: 340px;
+  overflow-y: scroll;
 }
 /* meta */
 /* HEADER
@@ -781,7 +798,7 @@ pre {
   .unit-article .entry-content,
   .unit-article .misc-content,
   .unit-article .unit-foot-inner {
-    width: 43.125em;
+    width: 54.375em;
   }
   .unit-article .unit-foot .pagination {
     float: left;
@@ -794,7 +811,7 @@ pre {
     width: 20.625em;
   }
   .layout-page .unit-body .unit-body-inner {
-    width: 43.125em;
+    width: 54.375em;
   }
   .layout-page .unit-body .article-list {
     width: 43.125em;
@@ -822,7 +839,7 @@ pre {
   .unit-article .unit-head-inner,
   .unit-article .entry-content,
   .unit-article .misc-content {
-    width: 43.125em;
+    width: 54.375em;
   }
   .unit-article .unit-foot-inner {
     width: 88.125em;
@@ -835,7 +852,7 @@ pre {
     width: 9.375em;
   }
   .layout-page .unit-body .unit-body-inner {
-    width: 43.125em;
+    width: 54.375em;
   }
   .layout-page .unit-body .article-list {
     width: 43.125em;
