--- a/assets/themes/the-minimum/css/syntaxhighlighter.css
+++ b/assets/themes/the-minimum/css/syntaxhighlighter.css
@@ -1,68 +1,61 @@
-pre .c { color: #999999; font-style: italic } /* Comment */
-pre .err { color: #a61717; background-color: #e3d2d2 } /* Error */
-pre .g { color: #d0d0d0 } /* Generic */
-pre .k { color: #6ab825; font-weight: bold } /* Keyword */
-pre .l { color: #d0d0d0 } /* Literal */
-pre .n { color: #d0d0d0 } /* Name */
-pre .o { color: #d0d0d0 } /* Operator */
-pre .x { color: #d0d0d0 } /* Other */
-pre .p { color: #d0d0d0 } /* Punctuation */
-pre .cm { color: #999999; font-style: italic } /* Comment.Multiline */
-pre .cp { color: #cd2828; font-weight: bold } /* Comment.Preproc */
-pre .c1 { color: #999999; font-style: italic } /* Comment.Single */
-pre .cs { color: #e50808; font-weight: bold; background-color: #520000 } /* Comment.Special */
-pre .gd { color: #d22323 } /* Generic.Deleted */
-pre .ge { color: #d0d0d0; font-style: italic } /* Generic.Emph */
-pre .gr { color: #d22323 } /* Generic.Error */
-pre .gh { color: #ffffff; font-weight: bold } /* Generic.Heading */
-pre .gi { color: #589819 } /* Generic.Inserted */
-pre .go { color: #cccccc } /* Generic.Output */
-pre .gp { color: #aaaaaa } /* Generic.Prompt */
-pre .gs { color: #d0d0d0; font-weight: bold } /* Generic.Strong */
-pre .gu { color: #ffffff; text-decoration: underline } /* Generic.Subheading */
-pre .gt { color: #d22323 } /* Generic.Traceback */
-pre .kc { color: #6ab825; font-weight: bold } /* Keyword.Constant */
-pre .kd { color: #6ab825; font-weight: bold } /* Keyword.Declaration */
-pre .kn { color: #6ab825; font-weight: bold } /* Keyword.Namespace */
-pre .kp { color: #6ab825 } /* Keyword.Pseudo */
-pre .kr { color: #6ab825; font-weight: bold } /* Keyword.Reserved */
-pre .kt { color: #6ab825; font-weight: bold } /* Keyword.Type */
-pre .ld { color: #d0d0d0 } /* Literal.Date */
-pre .m { color: #3677a9 } /* Literal.Number */
-pre .s { color: #ed9d13 } /* Literal.String */
-pre .na { color: #bbbbbb } /* Name.Attribute */
-pre .nb { color: #24909d } /* Name.Builtin */
-pre .nc { color: #447fcf; text-decoration: underline } /* Name.Class */
-pre .no { color: #40ffff } /* Name.Constant */
-pre .nd { color: #ffa500 } /* Name.Decorator */
-pre .ni { color: #d0d0d0 } /* Name.Entity */
-pre .ne { color: #bbbbbb } /* Name.Exception */
-pre .nf { color: #447fcf } /* Name.Function */
-pre .nl { color: #d0d0d0 } /* Name.Label */
-pre .nn { color: #447fcf; text-decoration: underline } /* Name.Namespace */
-pre .nx { color: #d0d0d0 } /* Name.Other */
-pre .py { color: #d0d0d0 } /* Name.Property */
-pre .nt { color: #6ab825; font-weight: bold } /* Name.Tag */
-pre .nv { color: #40ffff } /* Name.Variable */
-pre .ow { color: #6ab825; font-weight: bold } /* Operator.Word */
-pre .w { color: #666666 } /* Text.Whitespace */
-pre .mf { color: #3677a9 } /* Literal.Number.Float */
-pre .mh { color: #3677a9 } /* Literal.Number.Hex */
-pre .mi { color: #3677a9 } /* Literal.Number.Integer */
-pre .mo { color: #3677a9 } /* Literal.Number.Oct */
-pre .sb { color: #ed9d13 } /* Literal.String.Backtick */
-pre .sc { color: #ed9d13 } /* Literal.String.Char */
-pre .sd { color: #ed9d13 } /* Literal.String.Doc */
-pre .s2 { color: #ed9d13 } /* Literal.String.Double */
-pre .se { color: #ed9d13 } /* Literal.String.Escape */
-pre .sh { color: #ed9d13 } /* Literal.String.Heredoc */
-pre .si { color: #ed9d13 } /* Literal.String.Interpol */
-pre .sx { color: #ffa500 } /* Literal.String.Other */
-pre .sr { color: #ed9d13 } /* Literal.String.Regex */
-pre .s1 { color: #ed9d13 } /* Literal.String.Single */
-pre .ss { color: #ed9d13 } /* Literal.String.Symbol */
-pre .bp { color: #24909d } /* Name.Builtin.Pseudo */
-pre .vc { color: #40ffff } /* Name.Variable.Class */
-pre .vg { color: #40ffff } /* Name.Variable.Global */
-pre .vi { color: #40ffff } /* Name.Variable.Instance */
-pre .il { color: #3677a9 } /* Literal.Number.Integer.Long */
+.hll { background-color: #ffffcc }
+.c { color: #888888 } /* Comment */
+.err { color: #FF0000; background-color: #FFAAAA } /* Error */
+.k { color: #008800; font-weight: bold } /* Keyword */
+.o { color: #333333 } /* Operator */
+.cm { color: #888888 } /* Comment.Multiline */
+.cp { color: #557799 } /* Comment.Preproc */
+.c1 { color: #888888 } /* Comment.Single */
+.cs { color: #cc0000; font-weight: bold } /* Comment.Special */
+.gd { color: #A00000 } /* Generic.Deleted */
+.ge { font-style: italic } /* Generic.Emph */
+.gr { color: #FF0000 } /* Generic.Error */
+.gh { color: #000080; font-weight: bold } /* Generic.Heading */
+.gi { color: #00A000 } /* Generic.Inserted */
+.go { color: #888888 } /* Generic.Output */
+.gp { color: #c65d09; font-weight: bold } /* Generic.Prompt */
+.gs { font-weight: bold } /* Generic.Strong */
+.gu { color: #800080; font-weight: bold } /* Generic.Subheading */
+.gt { color: #0044DD } /* Generic.Traceback */
+.kc { color: #008800; font-weight: bold } /* Keyword.Constant */
+.kd { color: #008800; font-weight: bold } /* Keyword.Declaration */
+.kn { color: #008800; font-weight: bold } /* Keyword.Namespace */
+.kp { color: #003388; font-weight: bold } /* Keyword.Pseudo */
+.kr { color: #008800; font-weight: bold } /* Keyword.Reserved */
+.kt { color: #333399; font-weight: bold } /* Keyword.Type */
+.m { color: #6600EE; font-weight: bold } /* Literal.Number */
+.s { background-color: #fff0f0 } /* Literal.String */
+.na { color: #0000CC } /* Name.Attribute */
+.nb { color: #007020 } /* Name.Builtin */
+.nc { color: #BB0066; font-weight: bold } /* Name.Class */
+.no { color: #003366; font-weight: bold } /* Name.Constant */
+.nd { color: #555555; font-weight: bold } /* Name.Decorator */
+.ni { color: #880000; font-weight: bold } /* Name.Entity */
+.ne { color: #FF0000; font-weight: bold } /* Name.Exception */
+.nf { color: #0066BB; font-weight: bold } /* Name.Function */
+.nl { color: #997700; font-weight: bold } /* Name.Label */
+.nn { color: #0e84b5; font-weight: bold } /* Name.Namespace */
+.nt { color: #007700 } /* Name.Tag */
+.nv { color: #996633 } /* Name.Variable */
+.ow { color: #000000; font-weight: bold } /* Operator.Word */
+.w { color: #bbbbbb } /* Text.Whitespace */
+.mf { color: #6600EE; font-weight: bold } /* Literal.Number.Float */
+.mh { color: #005588; font-weight: bold } /* Literal.Number.Hex */
+.mi { color: #0000DD; font-weight: bold } /* Literal.Number.Integer */
+.mo { color: #4400EE; font-weight: bold } /* Literal.Number.Oct */
+.sb { background-color: #fff0f0 } /* Literal.String.Backtick */
+.sc { color: #0044DD } /* Literal.String.Char */
+.sd { color: #DD4422 } /* Literal.String.Doc */
+.s2 { background-color: #fff0f0 } /* Literal.String.Double */
+.se { color: #666666; font-weight: bold; background-color: #fff0f0 } /* Literal.String.Escape */
+.sh { background-color: #fff0f0 } /* Literal.String.Heredoc */
+.si { background-color: #eeeeee } /* Literal.String.Interpol */
+.sx { color: #DD2200; background-color: #fff0f0 } /* Literal.String.Other */
+.sr { color: #000000; background-color: #fff0ff } /* Literal.String.Regex */
+.s1 { background-color: #fff0f0 } /* Literal.String.Single */
+.ss { color: #AA6600 } /* Literal.String.Symbol */
+.bp { color: #007020 } /* Name.Builtin.Pseudo */
+.vc { color: #336699 } /* Name.Variable.Class */
+.vg { color: #dd7700; font-weight: bold } /* Name.Variable.Global */
+.vi { color: #3333BB } /* Name.Variable.Instance */
+.il { color: #0000DD; font-weight: bold } /* Literal.Number.Integer.Long */
