sync up theme to be like prod.

--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -11,6 +11,7 @@
 	<link href='{{ ASSET_PATH }}/css/style.css' rel="stylesheet" media="all">
 	<link href="http://feeds.feedburner.com/{{ site.author.feedbaname }}" rel="alternate" title="{{ page.title }}" type="application/atom+xml">
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/analytics.js/1.5.2/analytics.min.js"></script>
 </head>
 <body>
 
@@ -68,7 +69,19 @@
 	load('//platform.twitter.com/widgets.js', 'tweetjs');
 	// load('https://apis.google.com/js/plusone.js', 'gplus1js'); // Checkout http://j.mp/ApDgMr for usage html for this is <div class="g-plusone" data-size="medium"></div>
 	// load('//connect.facebook.net/en_US/all.js#xfbml=1', 'fbjssdk'); // Checkout http://j.mp/wZw2xR for using open graph protorol html for this is <div class="fb-like" data-href="{{ page.url }}" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" data-font="verdana"></div>
-	}(document, 'script'));
+    var images = document.getElementsByTagName('img');
+    var myImge = null;
+    for(var i = 0; i < images.length; ++i) {
+      myImage = images[i];
+      myImage.onload = function() { 
+        console.log(this.parentNode.tagName);
+        if ((this.offsetWidth > this.parentNode.offsetWidth) && (this.parentNode.tagName.toLowerCase() !== 'a')) {
+          this.style.width = this.parentNode.offsetWidth + "px";
+          this.style.height = "100%";
+        }
+      }
+    } 
+  }(document, 'script'));
 </script>
 <script>
 /*! A fix for the iOS orientationchange zoom bug.Script by @scottjehl, rebound by @wilto. MIT License.*/
