--- a/assets/themes/the-minimum/css/style.less
+++ b/assets/themes/the-minimum/css/style.less
@@ -146,7 +146,6 @@ pre code {
 				margin-right: 0;
 			}
 		}
-		ul, ol, dl { padding-left: 0; }
 		ul { list-style: square; }
 		ol { list-style: decimal; }
 		li, dt, dd {
@@ -168,6 +167,7 @@ pre code {
 			display: block;
 			margin-left: auto;
 			margin-right: auto;
+            width: 100%;
 		}
 		img.left { margin-right: 16px; }
 		img.right { margin-left: 16px; }
