--- a/assets/themes/the-minimum/css/_layout.less
+++ b/assets/themes/the-minimum/css/_layout.less
@@ -1,7 +1,7 @@
 // GO MOBILE FIRST!
 .the-header {
 	.unit-inner {
-		width: @3cols;
+	    width: @3cols;
 		margin-top: @line-height / @em;
 		margin-bottom: @line-height / @em;
 		margin-left: auto;
@@ -259,7 +259,7 @@
 @media only screen and (min-width: 1280px) {
 
 	.the-header {
-		.unit-inner { width: @11cols; }
+		.unit-inner { width: @10cols; }
 		.logo {
 			width: @5cols;
 			float: left;
@@ -279,7 +279,7 @@
 		.unit-foot {
 			.pagination {
 				float: left;
-				width: @7cols;
+				width: @6cols;
 			}
 			.gotop {
 				float: right;
@@ -305,7 +305,7 @@
 
 	.the-footer {
 
-		.unit-foot { width: @11cols; }
+		.unit-foot { width: @10cols; }
 
 	}  // .the-footer
 
@@ -318,20 +318,20 @@
 @media only screen and (min-width: 1410px) {
 
 	.the-header {
-		.unit-inner { width: @16cols; }
-		.logo { width: @8cols; }
-		.nav-global { width: @8cols; }
+		.unit-inner { width: @10cols; }
+		.logo { width: @5cols; }
+		.nav-global { width: @5cols; }
 	} // the-header
 
 	.unit-article {
 
 		.unit-head-inner, .entry-content, .misc-content { width: @10cols; }
-		.unit-foot-inner { width: @16cols; }
+		.unit-foot-inner { width: @10cols; }
 
 		.unit-foot {
 			.pagination { width: @10cols; }
 			.gotop {
-				padding-right: 360px;
+				//padding-right: 360px;
 				width: @2cols;
 			}
 		}
@@ -352,12 +352,12 @@
 
 	.the-footer {
 
-		.unit-foot { width: @16cols; }
+		.unit-foot { width: @10cols; }
 		.unit-inner {
-			h1, h2, h3, h4, h5, p, ul, ol, dl, blockquote {
+			/*h1, h2, h3, h4, h5, p, ul, ol, dl, blockquote {
 				margin-left: 360px;
 				margin-right: 360px;
-			}
+			}*/
 		}
 
 	}  // .the-footer
